--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dangrek&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dangrek&display=swap" rel="stylesheet">
   <title>Odd-Duck</title>
 </head>
 <body>
@@ -16,13 +13,13 @@
   </header>
   <body>
     <h4>Select the product, you prefer most, from each image set!</h4>
-    <div id="product-images">
-      <img id="image0">
-      <img id="image1">
-      <img id="image2">
+    <div id="img-container">
+      <img id="img-one" src="" alt="">
+      <img id="img-two" src="" alt="">
+      <img id="img-three" src="" alt="">
     </div>
     <button type="button" id="view-results">Results</button>
-    <ul id="vote-list"></ul>
+    <ul id="results-container"></ul>
   </body>
   <footer>Copyright &copy; Chris Johnston - 2022</footer>
   <script src="js/app.js"></script>
