--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +21,10 @@
     </div>
     <button type="button" id="view-results">Results</button>
     <ul id="results-container"></ul>
+    <div class="barChart1"><canvas id="myChart" width="600%" height="60%"></canvas></div>
   </body>
   <footer>Copyright &copy; Chris Johnston - 2022</footer>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
